--- a/code/styles.css
+++ b/code/styles.css
@@ -1,3 +1,172 @@
+*{
+
+
+    font-size: 25px;
+    margin: 0;
+    padding: 0;
+    font-family: 'Signika Negative', sans-serif; 
+    
+    
+}
+
+.header{
+    color: white;
+    background-image: url('img/back\ 2.jpg');
+    background-size: 100%;
+    height: 100vh;
+    width: 100vw;
+   
+}
+
+.logo{
+    height: 10vh;
+    padding-left: 40%;
+     opacity: 1 !important; 
+}
+
+.nav{
+    height: 15%;
+    background-color: rgb(77, 73, 73);
+    opacity: 0.75;
+    
+}
+.nav-list{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    
+}
+
+.list-item{
+    list-style: none;
+}
+
+.list-item >a {
+    text-decoration: none;
+    color: white;
+}
+a:hover{
+    color: goldenrod;
+}
+.info{
+    padding: 2vw;
+    height: 100vh;
+    width: 96vw;
+    background-color: rgb(227, 216, 216);
+    text-align: center;
+
+   
+}
+
+.img{
+    width: 50%;
+    height: auto;
+    border-radius: 75px;
+    padding-top: 2%;
+}
+
+.gold{
+    color: goldenrod;
+}
+
+
+.text-middle{
+
+    text-align: center;
+    padding-top: 25%;
+    position: relative;
+    animation-name: example;
+    animation-duration: 4s;
+  }
+
+@keyframes example {
+    0%   { top:-1000px; right:0px;}
+    
+    100% { top:0px; right:0px;}
+  }
+
+
+
+
+.text-footer{
+    text-align: center;
+    padding-top: 2%;
+    position: relative;
+    animation-name: footer;
+    animation-duration: 4s;
+    font-size: 60vw;
+
+}
+
+@keyframes footer {
+    0%   { top:0px; right:-1000px;}
+    
+    100% { top:0px; right:0px;}
+  }
+
+  .btn{
+    background-color: goldenrod;
+    border: none;
+    border-radius: 3px;
+    height: 5vh;
+    width: 10vw;
+    margin-top: 3%;
+    font-size: 2vw;
+   
+  }
+
+  .vedio{
+    
+    width: 100vw;
+    height: 70vh;
+  }
+
+  .section4{
+    width: 100vw;
+    height: 90vh;
+   display: flex;
+   justify-content: flex-end;
+  }
+
+  .text1{
+    display: flex;
+    width: 50%;
+    height: auto;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 10%;
+    padding: 10px;
+    text-align: center;
+  }
+  .food-img{
+    width: 100%;
+    height:100% ;
+  }
+
+  .section5{
+    width: 100vw;
+    height: 90vh;
+   display: flex;
+   flex-direction: row-reverse;
+   justify-content: flex-end;
+  }
+
+  .text1{
+    display: flex;
+    width: 50%;
+    height: auto;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 10%;
+    padding: 10px;
+    text-align: center;
+  }
+  .food-img{
+    width: 100%;
+    height:100% ;
+  }
+
+
 html,
 body {
   width: 100%;
